# backend

./: .env.example  .gitignore  Dockerfile  Dockerfile.dev  Makefile  cdk.context.json  package-lock.json  package.json  pyproject.toml
.github/test/: dev.yml
.github/workflows/: dev.yml
app/: main.py
app/alembic/: env.py
app/api/: api.py  deps.py  main.py  utils.py
app/core/: config.py  security.py
app/crud/: app_user_crud.py  country_crud.py  document_type_crud.py  invalid_token_crud.py  organization_crud.py  user_type.py
app/models/: __init__.py  app_user.py  app_user_model.py  country.py  country_model.py  document_type.py  document_type_model.py  invalid_token_model.py  mixins.py  organization_model.py  program_model.py  user_type_model.py
app/schemas/: auth_schema.py  token_payload.py
app/services/: auth_service.py  country_service.py  document_type_service.py
app/utils/: bucket.py  (+2 more)
cdk/: cdk.go  go.mod
lib/: backend-stack.ts
src/: db_init.py  db_init.sql  dependencies.layer.sh  docker-compose.yaml  main.py  pyproject.toml  requirements.layer.sh  requirements.txt  roadmap.md
src/notification-service/: Dockerfile  go.mod
src/notification-service/cmd/rabbitmq/: main.go
src/notification-service/internal/adapters/mock/: terminal.go
src/notification-service/internal/domain/: service.go
src/notification-service/internal/ports/: notifier.go
src/organizations-service/: Dockerfile  Makefile  go.mod  go.sum
src/organizations-service/cmd/api/: main.go
src/organizations-service/cmd/api/handlers/: create.go
src/organizations-service/cmd/lambda/: main.go
src/organizations-service/internal/adapters/broker/: rabbitmq.go
src/organizations-service/internal/adapters/handler/: gin.go
src/organizations-service/internal/adapters/repository/: postgres.go
src/organizations-service/internal/application/: service.go
src/organizations-service/internal/domain/: erros.go  organization.go  service.go
src/organizations-service/internal/ports/: broker.go  repository.go
src/organizations-service/internal/repository/: repository_port.go
src/organizations-service/internal/repository/pg/: adapter.go
src/organizations-service/internal/services/: create.go
src/resources/organizations/: crud.py  main.py  models.py
src/resources/organizations/create_organization/: main.py
src/resources/organizations/models/python/: organization.py
src/resources/students/: models.py
src/shared/python/: db.py
src/students-service/: go.mod  go.sum
src/students-service/cmd/api/: main.go
src/students-service/internal/adapters/repository/postgres/: student_pg.go
src/students-service/internal/application/dtos/: student_dto.go
src/students-service/internal/application/services/: student_service.go
src/students-service/internal/domain/: enrollment.go  guardian.go  student.go
src/students-service/internal/ports/repository/: enrollment_repo.go  guardian_repo.go  student_repo.go
src/students-service/migrations/: 20251030005425_create_students_table.sql
(+19 files in other folders)
